Nex prev style update

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <div class="slide__indicator">
               <span class="prev slider__btn-switch" data-type="prev">
                 <svg
-                  fill="#ffffff"
+                  fill="#000"
                   height="20px"
                   width="20px"
                   version="1.1"
@@ -278,7 +278,7 @@
               </span>
               <span class="next slider__btn-switch" data-type="next">
                 <svg
-                  fill="#ffffff"
+                  fill="#000"
                   height="20px"
                   width="20px"
                   version="1.1"
