Updated the images path on the index page

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 </div>
                 <img
                   class="slide__img"
-                  src="/images/Afar-small.jpg"
+                  src="./images/Afar-small.jpg"
                   alt="Afar"
                 />
               </div>
@@ -181,7 +181,7 @@
                 </div>
                 <img
                   class="slide__img"
-                  src="/images/Simien-Mountains-small.jpg"
+                  src="./images/Simien-Mountains-small.jpg"
                   alt="Simien Mountains"
                 />
               </div>
@@ -215,7 +215,7 @@
                 </div>
                 <img
                   class="slide__img"
-                  src="/images/Debre-libanos-small.jpg"
+                  src="./images/Debre-libanos-small.jpg"
                   alt="Debre Libanos"
                 />
               </div>
@@ -249,7 +249,7 @@
                 </div>
                 <img
                   class="slide__img"
-                  src="/images/Addis-Ababa-small.jpg"
+                  src="./images/Addis-Ababa-small.jpg"
                   alt="Addis Ababa"
                 />
               </div>
